--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 //@import "../node_modules/bootstrap/scss/bootstrap.scss";
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+//@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 html { background-color:#1569C7; }
 $color-green: green;
 $color-grey: #707070;
