--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,8 @@ $color-green:#34B058;
 $color-grey: #797979;
 $color-red:red;
 $color-blue-bg:#1569C7; //#0F8EC7 //
+$color-white: #FFF;
+$color-header-bg-light-grey: #F0F0F0;
 $font-family : Arial, Helvetica, sans-serif;
 $bottom-border-light-grey: 1px solid lightgrey;
 $bottom-border-dark-grey: 1px solid darkgrey;
